добавлены текстовые описания
в протокол внесена информация о школе, синхронизация предмета, портфолио учащегося

--- a/README
+++ b/README
@@ -1,14 +1,27 @@
-ПРОЕКТ унифицированного формат обмена данными для электронных журналов
-и других программных продуктов, связанных с учебным процессом
+RujelTalk - ПРОЕКТ формата обмена данными, связанными с учебным процессом. 
+Предназначен, в первую очередь, для электронных классных журналов и школьных дневников.
+Формат предусматривает разнообразные варианты оценивания, включая числовые, 
+символьные (текстовые), медийные (картинки, видео ...),
+критериальные (несколько оценок за одну работу). 
 
-формат учитывает возможные варианты оценивания. включая
- - критериальные (несколько оценок за одну работу)
- - символьные (картинки или буквы или что угодно)
- - комментарии (развернутые комментарии к отметкам или замечания по поведению)
+Такой обмен актуален
+- для смены программного обеспечения ЭЖ без потери информации
+- для передачи информации из одного ЭЖ в другой
+- для программно-независимого хранения данных
+- для формирования аналитических выборок и отчетов.
 
-предусмотрено сохранение вспомогательной информации для синхронизации данных 
-различных информационных систем.
+Предлагаемый XML-протокол содержит информацию о базовых объектах учебного процесса:
+- учителях
+- обучающихся (учебных группах, классах)
+- учебных курсах
+- достижениях (портфолио)
+
+Поскольку в различных программных реализациях представление и, соответственно, 
+кодификация данных различаются, в протоколе предусмотрена возможность указания 
+данных синхронизации при взаимном переносе, где это возможно. 
 
 (с) Геннадий Кушнир
-При публикации производных материалов ссылка на оригинальные материалы обязательна
-(например, при создании форматов на базе этого)
+При использовании данного протокола для обмена информацией необходимо 
+указывать в описании его название.
+При модификации данного протокола необходимо указывать название протокола, 
+автора и URL оригинального репозитория.
